--- a/Apis/requirements.txt
+++ b/Apis/requirements.txt
@@ -5,6 +5,6 @@ passlib[bcrypt]
 python-jose[cryptography]
 pydantic[email]
 python-multipart
-
-
-https://aws.amazon.com/pt/blogs/publicsector/tag/aws-educate-starter-accounts/
+pydantic
+requests
+passlib
